Add php.ini configuration and install wikidiff2 extension; update supervisord and fix ownership in update script

--- a/image/Dockerfile
+++ b/image/Dockerfile
@@ -140,6 +140,7 @@ RUN rm /var/www/html/w/extensions/modified.sh
 
 FROM php:8.1-apache AS server
 
+COPY php.ini-production /usr/local/etc/php/php.ini
 # System dependencies
 RUN set -eux; \
 	\
@@ -167,7 +168,7 @@ RUN set -eux; \
 	; \
 	rm -rf /var/lib/apt/lists/*
 
-# Install the PHP extensions we need
+# Install dependencies
 RUN set -eux; \
 	\
 	savedAptMark="$(apt-mark showmanual)"; \
@@ -176,6 +177,7 @@ RUN set -eux; \
 	apt-get install -y --no-install-recommends \
 	libicu-dev \
 	libonig-dev \
+    libthai-dev \
 	; \
 	\
 	docker-php-ext-install -j "$(nproc)" \
@@ -192,6 +194,15 @@ RUN set -eux; \
 	luasandbox \
 	; \
 	rm -r /tmp/pear; \
+	\
+	# Install wikidiff2
+	git clone https://gerrit.wikimedia.org/r/mediawiki/php/wikidiff2 /usr/local/include/php/ext/wikidiff2; \
+	cd /usr/local/include/php/ext/wikidiff2; \
+	phpize; \
+	./configure; \
+	make; \
+	make install; \
+	docker-php-ext-enable wikidiff2; \
 	\
 	# reset apt-mark's "manual" list so that "purge --auto-remove" will remove all build dependencies
 	apt-mark auto '.*' > /dev/null; \
@@ -235,6 +246,13 @@ RUN { \
 	echo 'opcache.max_accelerated_files=4000'; \
 	echo 'opcache.revalidate_freq=60'; \
 	} > /usr/local/etc/php/conf.d/opcache-recommended.ini
+
+RUN { \
+	echo 'wikidiff2.moved_line_threshold=0.9'; \
+	echo 'wikidiff2.change_threshold=0.9'; \
+	echo 'wikidiff2.moved_paragraph_detection_cutoff=10000'; \
+	echo 'wikidiff2.max_word_level_diff_complexity=80000000'; \
+} > /usr/local/etc/php/conf.d/wikidiff2-recommended.ini
 
 RUN { \
 	echo 'memory_limit=512M'; \
